--- a/index.html
+++ b/index.html
@@ -5,98 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List</title>
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, #fff2f2, #fff2f2);
-        }
-
-        .card {
-            border: 2px solid #2d336b;
-            width: 30vw;
-            min-width: 300px;
-            padding: 1rem;
-            border-radius: 10px;
-            background-color: #a9b5df;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 1.8rem;
-            color: #2d336b;
-            margin-bottom: 1rem;
-        }
-
-        .controls {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid #2d336b;
-            padding-bottom: 1rem;
-            gap: 10px;
-        }
-
-        input {
-            flex: 1;
-            height: 2.5rem;
-            padding: 0.5rem;
-            border: 2px solid #2d336b;
-            border-radius: 5px;
-            color: #2d336b;
-            font-size: 1rem;
-            outline: none;
-        }
-
-        button {
-            height: 2.5rem;
-            padding: 0 1rem;
-            border: none;
-            border-radius: 5px;
-            background-color: #2d336b;
-            color: white;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #1e254f;
-        }
-
-        .content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 1rem;
-            padding: 0.5rem;
-            background: rgba(255, 255, 255, 0.6);
-            border-radius: 5px;
-        }
-
-        .content button {
-            background-color: red;
-        }
-
-        .content button:hover {
-            background-color: darkred;
-        }
-
-        .done {
-            text-decoration: line-through;
-            opacity: 0.5;
-        }
-    </style>
 </head>
 
 <body>
@@ -116,73 +26,7 @@
         </div>
     </div>
 
-    <script>
-        const textbox = document.querySelector("#taskInput");
-        const addButton = document.querySelector("#addButton");
-        const taskList = document.querySelector("#taskList");
-
-        let eventsArray = JSON.parse(localStorage.getItem("eventsArray")) || [];
-
-        function loadEvents() {
-            taskList.innerHTML = "";
-            eventsArray.forEach(event => {
-                addEventToDOM(event);
-            });
-        }
-
-        function addEventToDOM(event) {
-            const contentDiv = document.createElement("div");
-            const contentP = document.createElement("p");
-            const contentButton = document.createElement("button");
-
-            contentDiv.classList.add("content");
-            contentP.innerText = event.eventName;
-
-            contentButton.classList.add("remove");
-            contentButton.innerText = "Remove";
-
-            if (event.status === "done") {
-                contentP.classList.add("done");
-                contentButton.classList.add("done");
-            }
-
-            contentButton.addEventListener("click", () => {
-                eventsArray = eventsArray.filter(e => e.id !== event.id);
-                localStorage.setItem("eventsArray", JSON.stringify(eventsArray));
-                contentDiv.remove();
-            });
-
-            contentDiv.addEventListener("click", () => {
-                event.status = event.status === "done" ? "" : "done";
-                localStorage.setItem("eventsArray", JSON.stringify(eventsArray));
-
-                contentP.classList.toggle("done");
-                contentButton.classList.toggle("done");
-            });
-
-            contentDiv.appendChild(contentP);
-            contentDiv.appendChild(contentButton);
-            taskList.appendChild(contentDiv);
-        }
-
-        addButton.addEventListener("click", () => {
-            if (textbox.value.trim() === "") return;
-
-            let event = {
-                id: new Date().toISOString(),
-                eventName: textbox.value,
-                status: ""
-            };
-
-            eventsArray.push(event);
-            localStorage.setItem("eventsArray", JSON.stringify(eventsArray));
-            addEventToDOM(event);
-
-            textbox.value = "";
-        });
-
-        loadEvents();
-    </script>
+    <script src="index.js"> </script>
 </body>
 
 </html>
